[package]
name = "geti"
version = "0.3.0"
edition = "2021"
authors = ["Rapha raphalrapha@gmail.com"]
description = "A tool for auditing Arbitrum stylus Rust smart contracts"
license = "MIT"
repository = "https://github.com/getiAI/getiSDK"
homepage = "https://github.com/getiAI"
documentation = "https://github.com/getiAI/getiSDK/blob/main/README.md"
readme = "README.md"

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
